# torchtitan

./: .gitmodules  .pre-commit-config.yaml  ACTIVATION_MONITOR_CUSTOMIZATION.md  AGENTS.md  RESUME_DEBUGGING_GUIDE.md  ROOT_CAUSE_ANALYSIS.md  causal_masks.txt  out.txt  pyproject.toml  pyvenv.cfg  ruff.toml  run_train.sh  test_activation_monitor_customization.py
examples/mosaic_photon/: README.md  __init__.py  dataloader.py  train_spec.py  train_with_mosaic.py
examples/mosaic_photon/callbacks/: __init__.py  optimizer_monitor.py  quasi_hyperbolic.py
examples/mosaic_streaming/: README.md  train.py
experiments/mosaic/: README.md  requirements-mosaic.txt  run_train.sh  train.py
precommit-hooks/: .pre-commit-hooks.yaml  run_embargo.sh  split_long_lines.py
tests/: conftest.py
tests/integration_tests/: run_tests.py  test_desloc_ft.py
tests/unit_tests/: test_desloc_container.py  test_mosaic_spec_utils.py
tests/utils/: __init__.py  imports.py  module_loading.py
torchtitan/: AGENTS.md  train.py
torchtitan/compat/: __init__.py
torchtitan/components/: AGENTS.md  checkpoint.py  loss.py  metrics.py  optimizer.py
torchtitan/config/: AGENTS.md  __init__.py  job_config.py  manager.py
torchtitan/datasets/: AGENTS.md
torchtitan/distributed/: AGENTS.md  pipeline_parallel.py  utils.py
torchtitan/experiments/: AGENTS.md  __init__.py
torchtitan/integrations/: __init__.py  mosaic.py  optimizer_monitor.py
torchtitan/models/: AGENTS.md  __init__.py  attention.py
torchtitan/optimizers/: adopt.py  qhadamw.py  qhadopt.py
torchtitan/protocols/: AGENTS.md  train_spec.py
torchtitan/tools/: AGENTS.md
(+218 files in other folders)
