# ---- All project specifications ---- #
[project]
name = "torchtitan"
description = "A PyTorch native platform for training generative AI models"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    { name = "PyTorch Team", email = "packages@pytorch.org" },
]
keywords = ["pytorch", "training", "llm"]
dependencies = [
    # Stateful Dataloader
    "torchdata>=0.8.0",
    # Hugging Face integrations
    "datasets>=3.6.0",
    # Tokenization
    "tokenizers>=0.15.0",
    # Miscellaneous
    "fsspec",
    "tyro",
    "tensorboard",
    "pre-commit>=4.3.0",
    "tomli>=1.1.0 ; python_full_version < '3.11'",
    "tabulate>=0.9.0",
    "wandb>=0.22.1",
    "safetensors>=0.6.2",
    "expecttest==0.1.6",
    "pytest==7.3.2",
    "pytest-cov>=7.0.0",
    "tomli-w>=1.1.0",
    "transformers>=4.56.2",
]
dynamic = ["version"]

[project.urls]
GitHub = "https://github.com/pytorch/torchtitan"
Documentation = "https://github.com/pytorch/torchtitan/tree/main/docs"
Issues = "https://github.com/pytorch/torchtitan/issues"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "wandb"
]

[tool.setuptools.dynamic]
version = {file = "assets/version.txt"}


# ---- Explicit project build information ---- #
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [""]
include = ["torchtitan*"]

[tool.pytest.ini_options]
addopts = ["--showlocals"]  # show local variables in tracebacks
